kubernetes/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: uhuy-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: uhuy-ui
          image: yansetiaji/uhuy-ui:v1
          ports:
            - containerPort: 3000
