kubernetes/Service-local.yaml
apiVersion: v1
kind: Service
metadata:
  name: uhuy-ui-service
  namespace: uhuy
spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
      nodePort: 3000
  type: NodePort
