kubernetes/Service-np.yaml
apiVersion: v1
kind: Service
metadata:
  name: uhuy-ui-service-np
  namespace: uhuy
spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
      nodePort: 30001
  type: NodePort
