kubernetes/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: uhuy-ui-ingress
spec:
  # tls:
  #   - hosts:
  #     - uhuy-ui.cicicuit.tech
  rules:
    - host: uhuy-ui.cicicuit.tech
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: uhuy-ui-service-ci
                port:
                  number: 3000
